使用 Colaboratory 建立

--- a/20220702.ipynb
+++ b/20220702.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "20220702.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyONXuKfIHI4Shunt0RYIrTi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,27 +27,209 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 20220702-Python人工智慧應用班"
+      ],
+      "metadata": {
+        "id": "eCoh6bgxzcjd"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "E8LLFaSTzPO_",
-        "outputId": "7153a15c-1424-46d2-d7d3-8491590e8db8"
+        "id": "WmvvTtiRytRE",
+        "outputId": "a62e04a6-dcfc-4369-98db-199339d3aea0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello world\n"
+            "Hello world!\n"
           ]
         }
       ],
       "source": [
-        "print(\"hello world\")"
+        "print(\"Hello world!\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 畫金字塔"
+      ],
+      "metadata": {
+        "id": "-bNM2lVK6c5K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"*\" * 10"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "9FEkaar_6f-S",
+        "outputId": "121bcdde-5571-483a-8dd5-1b6e9177f461"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'**********'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"*\"*10+\" \"*10+\"*\"*10"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "Ay-LAbW86xgG",
+        "outputId": "dcd74d8f-18a0-4192-812c-52c3d7f70398"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'**********          **********'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mFwOsMQb647b",
+        "outputId": "b88219d6-c784-4dc2-9842-39ff3d973d35"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  print(2*i+1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zWoZw5Ww7RzI",
+        "outputId": "7a4e081d-24b6-4ce2-cc55-052aeec207b9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  print((2*i+1)*\"*\")"
+      ],
+      "metadata": {
+        "id": "3cnKRpc17awU",
+        "outputId": "3d8cb351-0741-4b98-96da-8aa44f98d18b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*\n",
+            "***\n",
+            "*****\n",
+            "*******\n",
+            "*********\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 變數"
+      ],
+      "metadata": {
+        "id": "sIFBINXU6JpX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "L6tn7OqGzdNb"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
