使用 Colaboratory 建立

--- a/20220702.ipynb
+++ b/20220702.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "20220702.ipynb",
       "provenance": [],
+      "authorship_tag": "ABX9TyMhq+qleJPRgBFKSLCvQElv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +30,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 20220702-Python人工智慧應用班"
+        "#20220702-Python人工智慧應用班\n"
       ],
       "metadata": {
-        "id": "eCoh6bgxzcjd"
+        "id": "k_nolLaj55IY"
       }
     },
     {
@@ -42,43 +43,43 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "WmvvTtiRytRE",
-        "outputId": "a62e04a6-dcfc-4369-98db-199339d3aea0"
+        "id": "E8LLFaSTzPO_",
+        "outputId": "7153a15c-1424-46d2-d7d3-8491590e8db8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello world!\n"
+            "hello world\n"
           ]
         }
       ],
       "source": [
-        "print(\"Hello world!\")"
+        "print(\"hello world\")"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# 畫金字塔"
+        "##畫金字塔"
       ],
       "metadata": {
-        "id": "-bNM2lVK6c5K"
+        "id": "EmpDTZff6rw_"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "\"*\" * 10"
+        "\"*\"*10"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "id": "9FEkaar_6f-S",
-        "outputId": "121bcdde-5571-483a-8dd5-1b6e9177f461"
+        "id": "aPzI1DJa6wOe",
+        "outputId": "cc32ad03-d0d3-44be-8f25-aaeada417819"
       },
       "execution_count": null,
       "outputs": [
@@ -107,8 +108,8 @@
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "id": "Ay-LAbW86xgG",
-        "outputId": "dcd74d8f-18a0-4192-812c-52c3d7f70398"
+        "id": "cbLn3pru7IhG",
+        "outputId": "314a7921-bf5e-464d-ea3d-de8246e5fa7c"
       },
       "execution_count": null,
       "outputs": [
@@ -137,8 +138,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "mFwOsMQb647b",
-        "outputId": "b88219d6-c784-4dc2-9842-39ff3d973d35"
+        "id": "o-jhxL9l7aiP",
+        "outputId": "7e68ca3b-ad70-42bb-b43f-c80cafbe425e"
       },
       "execution_count": null,
       "outputs": [
@@ -159,42 +160,14 @@
       "cell_type": "code",
       "source": [
         "for i in range(5):\n",
-        "  print(2*i+1)"
+        "  print((2*i+1)*\"*\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "zWoZw5Ww7RzI",
-        "outputId": "7a4e081d-24b6-4ce2-cc55-052aeec207b9"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "3\n",
-            "5\n",
-            "7\n",
-            "9\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for i in range(5):\n",
-        "  print((2*i+1)*\"*\")"
-      ],
-      "metadata": {
-        "id": "3cnKRpc17awU",
-        "outputId": "3d8cb351-0741-4b98-96da-8aa44f98d18b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "JRuez8aD7k6e",
+        "outputId": "2e6fe43f-9756-44bd-a66c-ad31317706ff"
       },
       "execution_count": null,
       "outputs": [
@@ -212,24 +185,86 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "# 變數"
+        "for i in range(5):\n",
+        "  print((5-i)*\" \"+(2*i+1)*\"*\")\n"
       ],
       "metadata": {
-        "id": "sIFBINXU6JpX"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y6mKoGUz86qS",
+        "outputId": "0160b6ff-85e3-4af1-cfb3-1b2f35d48d0e"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     *\n",
+            "    ***\n",
+            "   *****\n",
+            "  *******\n",
+            " *********\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###定義函式"
+      ],
+      "metadata": {
+        "id": "GeQy4rT3BOne"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def pyramid(n):\n",
+        " for i in range(n):\n",
+        "  print((n-i)*\" \"+(2*i+1)*\"*\")"
       ],
       "metadata": {
-        "id": "L6tn7OqGzdNb"
+        "id": "Ad6rzcKb_pJm"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pyramid(10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sN03mtcE_733",
+        "outputId": "95d62b2f-28b3-485c-db31-f6701e9c7133"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "          *\n",
+            "         ***\n",
+            "        *****\n",
+            "       *******\n",
+            "      *********\n",
+            "     ***********\n",
+            "    *************\n",
+            "   ***************\n",
+            "  *****************\n",
+            " *******************\n"
+          ]
+        }
+      ]
     }
   ]
 }
