使用 Colaboratory 建立

--- a/20220702.ipynb
+++ b/20220702.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20220702.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMhq+qleJPRgBFKSLCvQElv",
+      "authorship_tag": "ABX9TyOGHy9Gpg0/5GiRg7na4vPj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -265,6 +265,263 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#變數"
+      ],
+      "metadata": {
+        "id": "4pJtA26hUktD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=1"
+      ],
+      "metadata": {
+        "id": "Yhra7isXUv9s"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#顯示x的記憶體位址\n",
+        "id(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t9N5-mfZU0ZU",
+        "outputId": "5ccf7399-9a08-4468-ee3e-4a5e484cff9c"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11256064"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#將x的記憶體位址轉換成16進位表示法\n",
+        "hex(id(x))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "foQAiYFWU8Xc",
+        "outputId": "df3c808a-582d-49a2-cf3a-25ca2c02c047"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0xabc100'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#資料型態"
+      ],
+      "metadata": {
+        "id": "IWT_VhK8Uq8F"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "•int（整數）==> 0, 1, 2, 3, ..."
+      ],
+      "metadata": {
+        "id": "NSVda9-gWuGa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=1"
+      ],
+      "metadata": {
+        "id": "_mEvSkTIW2HS"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "stxXTiErZI9b",
+        "outputId": "944fddf7-79f1-4d74-ecb2-6308d5299825"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(type(x))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zlWPWBE_b4Nr",
+        "outputId": "e866a8b5-ce58-407c-aa7e-8afbe5fce3bc"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "•float（浮點數） ==> 3.14, 1.0, ..."
+      ],
+      "metadata": {
+        "id": "7evDwMtVWwqK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "3>2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TmzjVNd_W7V8",
+        "outputId": "b7713c86-f1f8-43dd-cf53-be61a0f10615"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z=3>2"
+      ],
+      "metadata": {
+        "id": "NnJitCwJX5os"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iM2-zx19YAEi",
+        "outputId": "47fedfab-017a-48c0-9da9-d49aec1ab889"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "•bool（布林變動） ==>Ture(真,對),False(假,錯)"
+      ],
+      "metadata": {
+        "id": "SHEHw3erXLfk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "•str（字串）"
+      ],
+      "metadata": {
+        "id": "iFKawFFOXg1s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "rusM1Z9qX3lJ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
