使用 Colaboratory 建立

--- a/20220702.ipynb
+++ b/20220702.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20220702.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOGHy9Gpg0/5GiRg7na4vPj",
+      "authorship_tag": "ABX9TyPitm2TeluIuHpvqVqBpJ8C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -522,6 +522,127 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#使用Line Notify傳送訊息給自已"
+      ],
+      "metadata": {
+        "id": "uMHE1vSicTNZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* [取得權杖](https://notify-bot.line.me/my/)\n",
+        "* [Line Sticker List](https://github.com/victorgau/khpy_linenotify_intro/raw/main/misc/sticker_list.pdf)"
+      ],
+      "metadata": {
+        "id": "S_fAfXE1fck-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!curl -o linenotify.py https://raw.githubusercontent.com/victorgau/khpy_linenotify_intro/main/py/linenotify.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_M9XepildQsq",
+        "outputId": "e5d3ffc7-2343-4aaf-8e20-c10266dfc60b"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100   818  100   818    0     0   4728      0 --:--:-- --:--:-- --:--:--  4701\r100   818  100   818    0     0   4701      0 --:--:-- --:--:-- --:--:--  4701\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from linenotify import Notify"
+      ],
+      "metadata": {
+        "id": "wILTX22Kg8Yo"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#個人訊息\n",
+        "token = \"Tdga7G8PtHNPigxE1hlGhvzMKCArLR66q7zUXpYgTBJ\""
+      ],
+      "metadata": {
+        "id": "NQLCJCeng-zA"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#南區群組\n",
+        "token = \"3lZkuShKxEWB08NUr4nZTSYUiWsmPaHihouhw6CPKfe\""
+      ],
+      "metadata": {
+        "id": "a0xk6Jo7kAdH"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Notify(token, \"大家好，請多指教\",1,4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RvyZsitghJz9",
+        "outputId": "a61faa64-e3bd-40d8-f2a8-9da868dc93b0"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<Response [200]>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#容器型別（Container Types）\n",
+        "•list (串列) ==> [ ]\n",
+        "\n",
+        "•tuple (元組) ==> ( )\n",
+        "\n",
+        "•dict (字典) ==> { }\n",
+        "\n",
+        "•set (集合) ==> { }\n"
+      ],
+      "metadata": {
+        "id": "vIzEJ81bwi2g"
+      }
     }
   ]
 }
