使用 Colaboratory 建立

--- a/20220702.ipynb
+++ b/20220702.ipynb
@@ -6,7 +6,7 @@
       "name": "20220702.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMe3xXrZAI97pTGjrhshN6z",
+      "authorship_tag": "ABX9TyOSdqsacqcEDxvEzc2gyn3Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,16 @@
       ],
       "metadata": {
         "id": "k_nolLaj55IY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Print：永遠是跟世界打聲招呼的第一個程式\n",
+        "print語法是在print函式中放進你要印的東西，比如 print(我要印這個)。說聲 Hello World，跟程式的世界打聲招呼吧！\n"
+      ],
+      "metadata": {
+        "id": "wYOHs9tpFOXE"
       }
     },
     {
@@ -198,7 +208,7 @@
         "id": "y6mKoGUz86qS",
         "outputId": "0160b6ff-85e3-4af1-cfb3-1b2f35d48d0e"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,7 +280,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#變數"
+        "#變數（Variable）：：一切TypeError的泉源\n",
+        "變數就是幫資料取個名字、把資料儲存起來。比如: 變數 = 資料，a = 123。當我們輸入a、就會找到123。\n",
+        "變數雖然能儲存資料，但資料有很多種類型、所以就會有資料型態(Type)。舉例來說：\n",
+        "\n",
+        "•a = 123，type(a)會告訴我們 int (整數)。\n",
+        "\n",
+        "•b =‘456’，type(b)會告訴我們 str (字串)。\n",
+        "\n",
+        "•c = 8.70，type(c)會告訴我們這是一個 float (浮點數)。\n"
       ],
       "metadata": {
         "id": "4pJtA26hUktD"
@@ -284,7 +302,7 @@
       "metadata": {
         "id": "Yhra7isXUv9s"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -300,7 +318,7 @@
         "id": "t9N5-mfZU0ZU",
         "outputId": "5ccf7399-9a08-4468-ee3e-4a5e484cff9c"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -328,7 +346,7 @@
         "id": "foQAiYFWU8Xc",
         "outputId": "df3c808a-582d-49a2-cf3a-25ca2c02c047"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +389,7 @@
       "metadata": {
         "id": "_mEvSkTIW2HS"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -386,7 +404,7 @@
         "id": "stxXTiErZI9b",
         "outputId": "944fddf7-79f1-4d74-ecb2-6308d5299825"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +430,7 @@
         "id": "zlWPWBE_b4Nr",
         "outputId": "e866a8b5-ce58-407c-aa7e-8afbe5fce3bc"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,7 +462,7 @@
         "id": "TmzjVNd_W7V8",
         "outputId": "b7713c86-f1f8-43dd-cf53-be61a0f10615"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -466,7 +484,7 @@
       "metadata": {
         "id": "NnJitCwJX5os"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -481,7 +499,7 @@
         "id": "iM2-zx19YAEi",
         "outputId": "47fedfab-017a-48c0-9da9-d49aec1ab889"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,7 +573,7 @@
         "id": "_M9XepildQsq",
         "outputId": "e5d3ffc7-2343-4aaf-8e20-c10266dfc60b"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,7 +594,7 @@
       "metadata": {
         "id": "wILTX22Kg8Yo"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -588,7 +606,7 @@
       "metadata": {
         "id": "NQLCJCeng-zA"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -600,7 +618,7 @@
       "metadata": {
         "id": "a0xk6Jo7kAdH"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -615,7 +633,7 @@
         "id": "RvyZsitghJz9",
         "outputId": "a61faa64-e3bd-40d8-f2a8-9da868dc93b0"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -672,7 +690,7 @@
       "metadata": {
         "id": "lLbc8l_0yYvQ"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -687,7 +705,7 @@
         "id": "1t_aCDrMyvv-",
         "outputId": "a7609410-f63a-404c-95ad-90e2a27db820"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -714,7 +732,7 @@
         "id": "tb0s58SNy8FG",
         "outputId": "8070f6f0-9704-498a-fba7-8b70ccf91a36"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -743,7 +761,7 @@
         "id": "nEAIv-zHzKR-",
         "outputId": "68649360-69eb-4e2f-8c7f-ce436a73b8f1"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -774,7 +792,7 @@
       "metadata": {
         "id": "W1Bo0hP0zT61"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -790,7 +808,7 @@
         "id": "EHZ1XGnlzV1W",
         "outputId": "12acb746-e346-4112-c4e1-2e4ba4054ab2"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -819,7 +837,7 @@
         "id": "F-1KDHo4zavX",
         "outputId": "40393786-dd8d-4e7e-a323-73b6880abe49"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -846,7 +864,7 @@
         "id": "LoZZnGxmzrBA",
         "outputId": "45ae9c1e-543b-4796-f312-938803bd3af8"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -880,7 +898,7 @@
       "metadata": {
         "id": "ejtinyQj0HdW"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -895,7 +913,7 @@
         "id": "6TqxBNQ40Osf",
         "outputId": "39dcc973-a18f-4c26-dc0f-899e8cd93d79"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -921,7 +939,7 @@
         "id": "PnZfZ7kR0Rol",
         "outputId": "5d3d591f-85d5-433b-b449-cecb5831dfd4"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -956,7 +974,7 @@
         "id": "yTyMtRSl0dKo",
         "outputId": "dd8400eb-1968-4f65-cdb2-7b97c74a53c9"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -982,7 +1000,7 @@
         "id": "ghHLnW6R0jgW",
         "outputId": "3222686f-f068-446e-dd18-1d1b07c25fbb"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1004,7 +1022,7 @@
       "metadata": {
         "id": "0pS41Xzk0lDB"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1015,7 +1033,7 @@
       "metadata": {
         "id": "N6SSywg50p0b"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1030,7 +1048,7 @@
         "id": "CrRqdGKi0wRw",
         "outputId": "618f54b5-0323-4c72-cbc8-62157f748aeb"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1057,7 +1075,7 @@
         "id": "1Ap30x4_0xvg",
         "outputId": "f885158d-145b-4aa3-cb6c-abb03b518c8c"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1088,7 +1106,7 @@
         "id": "UW95IFZu01hP",
         "outputId": "1b65105d-f440-42e8-cf01-024787f61810"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1120,7 +1138,7 @@
       "metadata": {
         "id": "THdVCK0H1HHN"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1135,7 +1153,7 @@
         "id": "OW_87d4o1Ktv",
         "outputId": "a288b89b-901d-4c21-f840-4d27958683ff"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1157,7 +1175,7 @@
       "metadata": {
         "id": "3HxuEJBa1RQ2"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1168,7 +1186,7 @@
       "metadata": {
         "id": "0x0b6eee1So9"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1183,7 +1201,7 @@
         "id": "dpWLLkdC1W19",
         "outputId": "b520020e-4991-4d90-eaee-9269b6e5c2fd"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1209,7 +1227,7 @@
         "id": "M5RjCMlm1Zem",
         "outputId": "65db3470-a75f-477f-85a8-5321858f407a"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1235,7 +1253,7 @@
         "id": "USGClP0t1gjv",
         "outputId": "8c2150a8-cb1b-43d7-88cc-b5c12d80f70f"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1261,7 +1279,7 @@
         "id": "I4zc_BKr1o1X",
         "outputId": "e8b00e63-4907-4504-accf-a43fc5182944"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1292,7 +1310,7 @@
       "metadata": {
         "id": "UrTRIucW30OY"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1307,7 +1325,7 @@
         "id": "fIACoZcV3_wZ",
         "outputId": "04a5955b-a3ee-45ed-e011-dd284e636e3b"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1329,7 +1347,7 @@
       "metadata": {
         "id": "hdmf5gX34GbC"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1340,7 +1358,7 @@
       "metadata": {
         "id": "RCNKa8g14I7d"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1355,7 +1373,7 @@
         "id": "jphvVWSe4Nsv",
         "outputId": "52ac5e68-eacb-4789-e39e-3a6e1d4b3eec"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1381,7 +1399,7 @@
         "id": "vGITb_8N4UsN",
         "outputId": "aea5aa1f-1705-4d72-fddd-1975ff50ff4c"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1407,7 +1425,7 @@
         "id": "_y18s40J4Ya2",
         "outputId": "7c0276eb-dd5f-410a-ea78-ca28be41a3f2"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1433,7 +1451,7 @@
         "id": "O4S0IXTg4j3X",
         "outputId": "353c64cf-4955-4341-cf91-6c665b4dcfdd"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1455,7 +1473,7 @@
       "metadata": {
         "id": "tVaQnFkR6QRW"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1470,7 +1488,7 @@
         "id": "kQq9ZQVf6URk",
         "outputId": "131ff0a3-463a-4fae-81bd-94bf74e0370f"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1490,13 +1508,13 @@
         "set(w)"
       ],
       "metadata": {
+        "id": "n352JAhJ6f3s",
+        "outputId": "0fe32c84-34de-497e-8986-76f220bdbf83",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "n352JAhJ6f3s",
-        "outputId": "0fe32c84-34de-497e-8986-76f220bdbf83"
+        }
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
