使用 Colaboratory 建立

--- a/20220702.ipynb
+++ b/20220702.ipynb
@@ -6,7 +6,7 @@
       "name": "20220702.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOSdqsacqcEDxvEzc2gyn3Y",
+      "authorship_tag": "ABX9TyNkxdtUlIc47yTRhDLcwHlk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,6 +68,76 @@
       ],
       "source": [
         "print(\"hello world\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=5"
+      ],
+      "metadata": {
+        "id": "-YaZuFnBMvJS"
+      },
+      "execution_count": 102,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b=8"
+      ],
+      "metadata": {
+        "id": "_ceBzIVsM0Zb"
+      },
+      "execution_count": 103,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#無條件捨去除法\n",
+        "print(a//b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lSXaQxAMM2o-",
+        "outputId": "9c277fe6-3d4c-4c9b-901b-7cbc6c20a3aa"
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#a的b次方\n",
+        "print(a**b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-xve5uctNRk4",
+        "outputId": "aff9f57e-1542-4116-b686-f172353a8c71"
+      },
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "390625\n"
+          ]
+        }
       ]
     },
     {
@@ -286,9 +356,21 @@
         "\n",
         "•a = 123，type(a)會告訴我們 int (整數)。\n",
         "\n",
-        "•b =‘456’，type(b)會告訴我們 str (字串)。\n",
+        "•b =\"456\"，type(b)會告訴我們 str (字串)。\n",
         "\n",
-        "•c = 8.70，type(c)會告訴我們這是一個 float (浮點數)。\n"
+        "•c = 8.70，type(c)會告訴我們這是一個 float (浮點數)。\n",
+        "\n",
+        "**變數名稱最好以英文字母或底線做開頭 (數字不能做開頭)**\n",
+        "variable, variable, variable\n",
+        "\n",
+        "除開頭字元外，其他字元使用數字、底線、或英文字母\n",
+        "_var123, var_123\n",
+        "\n",
+        "變數會區分大小寫\n",
+        "\n",
+        "避開關鍵字 (keywords)\n",
+        "\n",
+        "避開內建的物件 (built-in objects)\n"
       ],
       "metadata": {
         "id": "4pJtA26hUktD"
@@ -331,6 +413,17 @@
           "execution_count": 31
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "-X4SZhWsLiLw"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -523,6 +616,80 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "z = 3 > 2"
+      ],
+      "metadata": {
+        "id": "ikl88swhLEo2"
+      },
+      "execution_count": 92,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b6QJuQiXLGyL",
+        "outputId": "576ed5af-e2f5-411f-9e01-6117c4979927"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "u = 3 == 2"
+      ],
+      "metadata": {
+        "id": "FNeZxaFyLUWT"
+      },
+      "execution_count": 94,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "u"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "weMaOuBILX2F",
+        "outputId": "e5805e8b-10e4-446c-bdbf-8288f7bb1344"
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 95
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "•str（字串）"
@@ -534,13 +701,39 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "v = \"dog\""
       ],
       "metadata": {
         "id": "rusM1Z9qX3lJ"
       },
-      "execution_count": null,
+      "execution_count": 96,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(v)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "92Y-XgrWLlHr",
+        "outputId": "4d19efac-973f-4c4f-c382-4c271a74012c"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 98
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -666,7 +859,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Markdown equa\n",
+        "#Markdown equa 的範例\n",
         "愛因斯坦說：E=mc2"
       ],
       "metadata": {
