--- a/20220709_Python人工智慧應用班.ipynb
+++ b/20220709_Python人工智慧應用班.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20220709-Python人工智慧應用班",
       "provenance": [],
-      "authorship_tag": "ABX9TyNhNKzTZQidgxcGkX7OVklU",
+      "authorship_tag": "ABX9TyO4laoagBU77dY1O1iqFSjc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,17 +31,17 @@
       "cell_type": "markdown",
       "source": [
         "##初學者需要知道的概念\n",
-        "*資料型態\n",
-        " *int==>整數(0,1,2,...)\n",
-        " *float==>浮點數(3.14,1.1,...)\n",
-        " *bool==>布林變數(True,False)\n",
-        " *str==>字串\n",
-        "*容器型別\n",
-        " *list==〉串列[]\n",
-        " *tuple==〉元組()\n",
-        " *dict==〉字典{}\n",
-        " *set==〉集合{}\n",
-        "*基礎語法\n",
+        "###資料型態\n",
+        " •int==>整數(0,1,2,...)\n",
+        " •float==>浮點數(3.14,1.1,...)\n",
+        " •bool==>布林變數(True,False)\n",
+        " •str==>字串\n",
+        "###容器型別\n",
+        " •list==〉串列[]\n",
+        " •tuple==〉元組()\n",
+        " •dict==〉字典{}\n",
+        " •set==〉集合{}\n",
+        "###基礎語法\n",
         " *loops==〉\n",
         " *functions==〉\n",
         " *if statements==〉\n",
